@@ -3,6 +3,7 @@ XXXX-XX-XX: 4.0.0-preview.4
 	New features:
 
 	all : allow `enum abstract` syntax instead of `@:enum abstract` (#4282)
+	all : support signature completion on incomplete structures (#5767)
 
 	General improvements and optimizations:
 
